@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ===============================================================================
+    * Added a Ping module.
     * Moved Werewolf back to stable.
 
 3.0 Alpha 10
